finish hw4 and hw5
